[metadata]
name = securesystemslib
author = https://www.updateframework.com
author_email = theupdateframework@googlegroups.com
license = MIT
description = A library that provides cryptographic and general-purpose routines for Secure Systems Lab projects at NYU
keywords =
    cryptography,
    keys,
    signatures,
    rsa,
    ed25519,
    ecdsa
url = https://github.com/secure-systems-lab/securesystemslib
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Security
    Topic :: Software Development

project_urls = 
    Source = https://github.com/secure-systems-lab/securesystemslib
    Issues = https://github.com/secure-systems-lab/securesystemslib/issues


[options]
packages = find:
install_requires =
    six>=1.11.0
    subprocess32; python_version < "3"
    python-dateutil>=2.8.0
tests_require = mock; python_version < "3.3"
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3


[options.packages.find]
exclude = tests; debian

[options.extras_require]
colors = colorama>=0.3.9
crypto = cryptography>=2.6
pynacl = pynacl>1.2.0
